@@ -1,6 +1,11 @@
+2002-10-15  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* dae/oprofiled.c:
+	* daemon/oprofiled: strerrno --> strerror
+
 2002-10-14  Philippe Elie  <phil.el@wanadoo.fr>
 
-	* libop/op_events.c: typo in L2_DBUS_BUS_RD PPro event name
+	* libop/op_events.c: typo in L2_DBUS_BUSY_RD PPro event name
 
 2002-10-13  Philippe Elie  <phil.el@wanadoo.fr>
 
